Fix header-1 size and z-index for columns

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -32,6 +32,7 @@ header {
   float:left;
   position:fixed;
   -webkit-font-smoothing:subpixel-antialiased;
+  z-index: 1;
 }
 
 section {
@@ -58,12 +59,15 @@ p, ul, ol, table, pre, dl {
   margin:0 0 20px;
 }
 
-h1, h2, h3 {
-  line-height:1.1;
+
+
+h2, h3 {
+  line-height:1.4;
 }
 
 h1 {
-  font-size:28px;
+  font-size:38px;
+  line-height: 1.5;
 }
 
 h2 {
